adding Features model